Formulário deletado e código principal reutilizável identado

--- a/index_home_page.html
+++ b/index_home_page.html
@@ -1,29 +1,32 @@
 <!DOCTYPE html>
-    <html lang="pt-br">
-    
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Informações das apresentações do SAC 2024, programação, direcionamento e relação de visitantes.">
-        <meta name="keywords" content="SAC, Salão de artes e ciência, colégio visão, colégio visão recife, ciência, inovação, curiosidade, educação, conscientização, ">
-        <meta name="author" content="DEPO"> <!--Escolham a o nome da equipe que criou esta página! :3-->
-        <link rel="stylesheet" href="psac.css">
-        <link rel="javascript" href="psac.js">
-        <title>SAC Colégio Visão Recife</title>
-    </head>
+<html lang="pt-br">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Informações das apresentações do SAC 2024, programação, direcionamento e relação de visitantes.">
+    <meta name="keywords"
+        content="SAC, Salão de artes e ciência, colégio visão, colégio visão recife, ciência, inovação, curiosidade, educação, conscientização, tecnologia,  ">
+    <meta name="author" content="DEPO">
+    <link rel="stylesheet" href="psac.css">
+    <link rel="javascript" href="psac.js">
+    <title>SAC Colégio Visão Recife</title>
+</head>
 
 <body>
-    <header>
-        <h1>Salão de Artes e Ciência</h1>
-        <h2>(SAC)</h2>      <!--Não deve haver mais de um h1!-->
+    <header>    
+        <h1>SAC</h1>
     </header>
 
 
 
-    <nav>   <!--SUJESTÃO: Ao invés de criar uma página pra cada série, vamos criar botões que, ao serem clicados, redirecionem o usuário para o começo da tabela da série que ela deseja visualizar -> identificação da turma através da cor sorteada nos jogos (pensar em algo melhor :p)-->
-        <button onclick="" id="filtro">Filtro</button>
+    <nav>
+        <p>Filtro</p>
+        <button onclick="" id="Série">Filtro</button>
         <button onclick="" id="voltar">Voltar</button>
         <button onclick="" id="mapa">Mapa</button>
     </nav>
 </body>
+
 </html>
